force-app/RecordActions/default/objects/sflib_RecordActionCondition__c/sflib_RecordActionCondition__c.object-meta.xml
<CustomObject>
    <label>Record Action Condition</label>
    <nameField>
        <displayFormat>RAC{0000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Action Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>