force-app/RecordActions/default/objects/sflib_RecordActionCondition__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>