force-app/RecordActions/default/objects/sflib_RecordActionCondition__c/fields/RecordAction__c.field-meta.xml
<CustomField>
    <fullName>RecordAction__c</fullName>
    <label>Record Action</label>
    <referenceTo>sflib_RecordAction__c</referenceTo>
    <relationshipLabel>Record Action Conditions</relationshipLabel>
    <relationshipName>RecordActionConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>