force-app/RecordActions/default/objects/sflib_RecordActionCondition__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>